# canary

./: CMakePresets.json  STAT_SYSTEM_DOCKER_GUIDE.md  cmake_final.txt  cmake_fix_test.txt  cmake_full_output.txt  cmake_latest.txt  cmake_simple.txt  cmake_v2.txt  cmake_v3.txt  config.lua.dist  docker-compose.stats.yml  final_cmake_log.txt  schema.sql  vcpkg.json
cmake/: canary.rc
cmake/modules/: BaseConfig.cmake  CanaryLib.cmake  FindLuaJIT.cmake  LoggingHelper.cmake  MessageColors.cmake
data/: stages.lua
data/scripts/talkactions/player/: addstat.lua  stats.lua
docker/data/: 03-player-stats-migration.sql
src/: CMakeLists.txt
src/account/: account.hpp  account_info.hpp  account_repository.hpp
src/config/: config_enums.hpp  configmanager.hpp
src/creatures/appearance/outfit/: outfit.hpp
src/creatures/players/: player.cpp  player.hpp
src/game/: game.hpp
src/io/: iologindata.cpp
src/io/functions/: iologindata_load_player.cpp  iologindata_load_player.hpp  iologindata_save_player.cpp  iologindata_save_player.hpp
src/lib/logging/: logger.hpp
src/lua/functions/creatures/player/: player_functions.cpp  player_functions.hpp
src/protobuf/: CMakeLists.txt
src/server/network/protocol/: protocolgame.cpp  protocolgame.hpp
